--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- <base href="/"> -->
 
 	<title>
-		OptimizedHTML 5
+		Tibet 2026: Lhasa – Three Lakes – Kailash
 	</title>
 	<meta name="description" content="Startup HTML template OptimizedHTML 5">
 
@@ -67,8 +67,8 @@
 	<section class="hero">
 		<div class="container">
 			<div class="hero__wrapper">
-				<h1>Wisdom and Power of Tibet sacred places</h1>
-				<p>Embark on a spiritual journey and meditate amidst the serene landscapes of Altai</p>
+				<h1>Tibet 2026: Lhasa – Three Lakes – Kailash</h1>
+				<p>August 6–20, 2026 • Embark on a spiritual journey and meditate amidst the serene landscapes of Tibet</p>
 				<a href="#booking-form" class="btn accent book-btn">Book Your Retreat</a>
 			</div>
 		</div>
@@ -105,10 +105,10 @@
 
 				<div class="introduction__footer">
 					<ul>
-						<li>
-							<p class="num">14</p>
-							<p class="num-title">Days</p>
-						</li>
+					<li>
+						<p class="num">16</p>
+						<p class="num-title">Days</p>
+					</li>
 						<li>
 							<p class="num">10</p>
 							<p class="num-title">People</p>
@@ -201,16 +201,16 @@
 						<li>
 							<div class="list__item">
 								<span class="day">Day 1</span>
-								<h4>Beijing, China</h4>
-								<p>PEK (or PEX) Hand over of Tibet Permit flying to LXA – transfer to hotel</p>
+								<h4>Arrival in Lhasa (3650 m)</h4>
+								<p>Transfer to hotel. Rest, acclimatization.</p>
 							</div>
 						</li>
 
 						<li>
 							<div class="list__item">
 								<span class="day">Day 2</span>
-								<h4>Tibet Permit,Flying to Lxasa</h4>
-								<p>PEK (or PEX) Hand over of Tibet Permit flying to LXA – transfer to hotel</p>
+								<h4>Lhasa</h4>
+								<p>Jokhang Temple, Barkhor Street. Transfer to Samye.</p>
 
 							</div>
 						</li>
@@ -218,8 +218,8 @@
 						<li>
 							<div class="list__item">
 								<span class="day">Day 3</span>
-								<h4>Jokhang – Barkhor, Potala</h4>
-								<p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
+								<h4>Samye → Mindrolling → Lhasa</h4>
+								<p>Drive: 250 km. Monastery tour.</p>
 
 							</div>
 						</li>
@@ -227,8 +227,8 @@
 						<li>
 							<div class="list__item">
 								<span class="day">Day 4</span>
-								<h4>Tibet Permit,Flying to Lxasa</h4>
-								<p>PEK (or PEX) Hand over of Tibet Permit flying to LXA – transfer to hotel </p>
+								<h4>Lhasa → Lake Namtso → Lhasa (day trip)</h4>
+								<p>Drive: 440 km. Altitude: Nakchu-La Pass (5190 m), Lake (4718 m).</p>
 
 							</div>
 						</li>
@@ -236,8 +236,8 @@
 						<li>
 							<div class="list__item">
 								<span class="day">Day 5</span>
-								<h4>Tibet Permit,Flying to Lxasa</h4>
-								<p>PEK (or PEX) Hand over of Tibet Permit flying to LXA – transfer to hotel </p>
+								<h4>Lhasa → Lake Yamdrok-Tso → Gyantse → Shigatse</h4>
+								<p>Drive: 350 km. Altitude: Kamba-La Pass (4794 m). Tour of Pelkor Chode Monastery and Kumbum Stupa. Overnight in Shigatse (3900 m).</p>
 
 							</div>
 						</li>
@@ -245,8 +245,8 @@
 						<li>
 							<div class="list__item">
 								<span class="day">Day 6</span>
-								<h4>Tibet Permit,Flying to Lxasa</h4>
-								<p>PEK (or PEX) Hand over of Tibet Permit flying to LXA – transfer to hotel </p>
+								<h4>Shigatse → Saga</h4>
+								<p>Drive: 240 km. Morning tour of Tashilhunpo Monastery. Overnight in Saga (4400 m).</p>
 
 							</div>
 						</li>
@@ -254,8 +254,8 @@
 						<li>
 							<div class="list__item">
 								<span class="day">Day 7</span>
-								<h4>Tibet Permit,Flying to Lxasa</h4>
-								<p>PEK (or PEX) Hand over of Tibet Permit flying to LXA – transfer to hotel </p>
+								<h4>Saga → Tirthapuri</h4>
+								<p>Drive: 330 km. Visit to the sacred site of Tirthapuri, ritual bathing in hot springs. Overnight in Tirthapuri guesthouse (4600 m).</p>
 
 							</div>
 						</li>
@@ -263,8 +263,8 @@
 						<li>
 							<div class="list__item">
 								<span class="day">Day 8</span>
-								<h4>Tibet Permit,Flying to Lxasa</h4>
-								<p>PEK (or PEX) Hand over of Tibet Permit flying to LXA – transfer to hotel </p>
+								<h4>Tirthapuri → Darchen → Start of Kora → Dirapuk</h4>
+								<p>Short drive to Darchen. Trek: 18 km, 6–7 hours. Overnight in a guesthouse near Dirapuk Monastery (5000 m).</p>
 
 							</div>
 						</li>
@@ -272,8 +272,8 @@
 						<li>
 							<div class="list__item">
 								<span class="day">Day 9</span>
-								<h4>Tibet Permit,Flying to Lxasa</h4>
-								<p>PEK (or PEX) Hand over of Tibet Permit flying to LXA – transfer to hotel </p>
+								<h4>Rest in Dirapuk</h4>
+								<p>Meditation at the North Face of Kailash.</p>
 
 							</div>
 						</li>
@@ -281,8 +281,8 @@
 						<li>
 							<div class="list__item">
 								<span class="day">Day 10</span>
-								<h4>Tibet Permit,Flying to Lxasa</h4>
-								<p>PEK (or PEX) Hand over of Tibet Permit flying to LXA – transfer to hotel </p>
+								<h4>Dirapuk → Dolma-La Pass → Zutulphuk</h4>
+								<p>Trek: 18 km, 7–9 hours. Pass altitude: 5630 m. Overnight in a guesthouse near Zutulphuk Monastery (4790 m).</p>
 
 							</div>
 						</li>
@@ -290,8 +290,8 @@
 						<li>
 							<div class="list__item">
 								<span class="day">Day 11</span>
-								<h4>Tibet Permit,Flying to Lxasa</h4>
-								<p>PEK (or PEX) Hand over of Tibet Permit flying to LXA – transfer to hotel </p>
+								<h4>Zutulphuk → Completion of Kora → Lake Manasarovar</h4>
+								<p>Trek: 10 km, 3–4 hours. Meet with transport. Drive to Lake Manasarovar. Overnight in a lodge near the lake (4550 m).</p>
 
 							</div>
 						</li>
@@ -299,8 +299,44 @@
 						<li>
 							<div class="list__item">
 								<span class="day">Day 12</span>
-								<h4>Tibet Permit,Flying to Lxasa</h4>
-								<p>PEK (or PEX) Hand over of Tibet Permit flying to LXA – transfer to hotel </p>
+								<h4>Manasarovar</h4>
+								<p>Day of rest and integration. Free time on the lake shore.</p>
+
+							</div>
+						</li>
+
+						<li>
+							<div class="list__item">
+								<span class="day">Day 13</span>
+								<h4>Manasarovar</h4>
+								<p>Visit to Chiu Monastery. Practices at the lake.</p>
+
+							</div>
+						</li>
+
+						<li>
+							<div class="list__item">
+								<span class="day">Day 14</span>
+								<h4>Transfer Manasarovar → Border (Kodari/Purang area)</h4>
+								<p>Overnight near the border.</p>
+
+							</div>
+						</li>
+
+						<li>
+							<div class="list__item">
+								<span class="day">Day 15</span>
+								<h4>Border crossing. Transfer to Kathmandu</h4>
+								<p>Overnight in Kathmandu.</p>
+
+							</div>
+						</li>
+
+						<li>
+							<div class="list__item">
+								<span class="day">Day 16</span>
+								<h4>Free day in Kathmandu</h4>
+								<p>Departure from Kathmandu or continuation of the program in Nepal.</p>
 
 							</div>
 						</li>
@@ -506,6 +542,10 @@
 							</a>
 							<div class="content first-section" style="display: none;">
 								<div class="first-section__header">
+									<div style="width: 100%; margin-bottom: 20px; padding-bottom: 20px; border-bottom: 1px solid #e0e0e0;">
+										<h3 style="font-size: 28px; margin-bottom: 10px;">Tour Price: $2,800</h3>
+										<p style="font-size: 16px; color: #666;">August 6–20, 2026 • 16 Days</p>
+									</div>
 
 									<div>
 										<p>INCLUDED:</p>
