--- a/index.html
+++ b/index.html
@@ -4,19 +4,29 @@
 <head>
 
 	<meta charset="utf-8">
-	<title>
-		Тибет 2026: Путешествие к Сердцу Мира
-	</title>
-	<meta name="description" content="Экспедиция в Тибет: Кайлаш, Манасаровар, Лхаса. Духовная алхимия и кора.">
+	<title>Тибет 2026: Путешествие к Сердцу Мира</title>
+	<meta name="description"
+		content="Экспедиция к горе Кайлаш в год Огненной Лошади. Лхаса, Манасаровар, Кора. Трансформация духа и созвучие с вечностью.">
 
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
 	<link rel="icon" href="images/favicon.png">
-	<meta property="og:image" content="images/dist/preview.jpg">
+
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://puresummit.com/">
+	<meta property="og:title" content="Тибет 2026: Путешествие к Сердцу Мира">
+	<meta property="og:description"
+		content="Экспедиция к горе Кайлаш в год Огненной Лошади. Лхаса, Манасаровар, Кора. Трансформация духа и созвучие с вечностью.">
+	<meta property="og:image" content="https://puresummit.com/images/dist/preview.jpg">
+
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://puresummit.com/">
+	<meta property="twitter:title" content="Тибет 2026: Путешествие к Сердцу Мира">
+	<meta property="twitter:description"
+		content="Экспедиция к горе Кайлаш в год Огненной Лошади. Лхаса, Манасаровар, Кора. Трансформация духа и созвучие с вечностью.">
+	<meta property="twitter:image" content="https://puresummit.com/images/dist/preview.jpg">
 
 	<link rel="stylesheet" href="css/main.min.css">
-
 	<link rel="stylesheet" href="css/user.css">
 
 
