--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
 							<p>В 2026 году Кайлаш активирует свой канал Вечности. Это не просто туризм - это возможность
 								соприкоснуться с древней аутентичностью и пройти через сакральную дверь, открытую в этот
 								особый год.</p>
+							<p>Подробнее про это путешествие можно почитать перейдя по <a
+									href="https://teletype.in/@traveltheworldwithme/statiya" target="_blank"
+									class="intro-link">этой ссылке</a></p>
 						</div>
 
 						<div class="introduction__img">
@@ -114,14 +117,6 @@
 
 					<div class="introduction__footer">
 						<ul>
-							<li>
-								<p class="num">26</p>
-								<p class="num-title">Год Огненной Лошади</p>
-							</li>
-							<li>
-								<p class="num">53</p>
-								<p class="num-title">Длина Священной Коры</p>
-							</li>
 							<li>
 								<p class="num">9</p>
 								<p class="num-title">Мест <br> Силы</p>
@@ -577,26 +572,26 @@
 				<div class="choose__wrapper">
 
 					<div class="choose__item">
-						<img src="images/dist/buddha.png" alt="Buddha">
+						<img src="images/user/b1.jpg" alt="ancient">
 						<h2>Древние тайны</h2>
 						<p>Вы увидите забытые временем городища и древние пирамиды, хранящие память тысячелетий.</p>
 					</div>
 
 					<div class="choose__item">
-						<img src="images/dist/buddha.png" alt="Buddha">
+						<img src="images/user/b2.jpg" alt="nature">
 						<h2>Сила Природы</h2>
 						<p>Святые горячие источники, дарующие восстановление, и чистейший воздух «Крыши Мира».</p>
 					</div>
 
 					<div class="choose__item">
-						<img src="images/dist/buddha.png" alt="Buddha">
+						<img src="images/user/b3.jpg" alt="lotus">
 						<h2>Духовные Практики</h2>
 						<p>Специальные практики для сонастройки с местами силы, помогающие войти в состояние ясности
 							ума.</p>
 					</div>
 
 					<div class="choose__item">
-						<img src="images/dist/buddha.png" alt="Buddha">
+						<img src="images/user/b4.jpg" alt="guide">
 						<h2>Опытные Проводники</h2>
 						<p>Полное погружение в традиции с гидами, которые знают ключи к этим сакральным дверям.</p>
 					</div>
@@ -613,7 +608,8 @@
 					<div class="guide__box">
 						<h4>Екатерина</h4>
 						<span>Автор путешествий «Созвучие»</span>
-						<p>Природа - это живой храм, а треккинг - инструмент для очищения ума. Катя организует эти
+						<p>Природа - это живой храм, а треккинг - инструмент для очищения ума, взращивания духа и
+							раскрытия сердца. Катя организует эти
 							путешествия, чтобы поделиться опытом глубокой сонастройки с пространством. Она создает
 							атмосферу доверия и простоты, помогая участникам увидеть за физической красотой гор
 							сакральные двери к самим себе. Это путь для тех, кто ищет не просто впечатлений, а ясности и
@@ -634,6 +630,37 @@
 				</div>
 				<div class="swiper review__swiper">
 					<div class="swiper-wrapper">
+
+						<div class="swiper-slide">
+							<div class="slide__wrap">
+								<div class="user">
+									<img src="images/user/Bova33.jpg" alt="Андрей Бовин">
+									<div>
+										<p><a href="https://t.me/Bova33" target="_blank" class="user-link">Андрей
+												Бовин</a></p>
+										<p>Участник</p>
+									</div>
+								</div>
+								<div class="slide-review">
+									<p>Горный Алтай! Белуха! Долго я мечтал побывать в этих невероятно красивых и
+										волшебных местах. Мечта сбылась совершенно неожиданно летом 2025 года. Мне
+										посчастливилось пойти в поход к подножию Белухи в район Аккемского озера в
+										составе отличной команды в сопровождении удивительного гида-инструктора Палкиной
+										Екатерины. Наш маршрут пролегал вдоль реки Аккем и был богат на необыкновенные
+										виды. Леса с цветущими полянами, "Белая" река со свой музыкой, горные вершины и
+										просторы до сих пор перед моими глазами. На второй день после старта мы были уже
+										у подножия высшей точки Алтайских гор, откуда в последующие дни совершали
+										радиальные выходы в долину Ярлу, долину семи озер, к озеру горных Духов, на
+										Аккемский ледник. Хочется отметить, что это был не просто поход, а поход с
+										глубинным погружением. Нашему гиду было очень важно познакомить нас не только с
+										природной красотой этих мест, но и настроить нас на их ритм, помочь соединиться,
+										услышать их необыкновенное звучание. И ей это удалось на все 100%. Авторские
+										практики Екатерины это отдельная и очень сокровенная история. Могу сказать одно
+										- они позволили мне зазвучать, соединиться с ключевыми для меня пространствами и
+										стать более целостным!</p>
+								</div>
+							</div>
+						</div>
 
 						<div class="swiper-slide">
 							<div class="slide__wrap">
